--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Технології та безпека хмарних обчислень<br>Бондаренко Остап ІК-202</br></title>
+		<title>Технології та безпека хмарних обчислень</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Технології та безпека хмарних обчислень</h1>
-								<p> Дізнайтеся, як досягти успіху в автоматизації всього
+								<p> Дізнайтеся, як досягти успіху в автоматизації всього<br>Бондаренко Остап ІК-202</br>
 														</p>
 								<p id="myname"></p>
 							</div>
