--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Технології та безпека хмарних обчислень</h1>
-								<p> Дізнайтеся, як досягти успіху в автоматизації всього<br>Бондаренко Остап ІК-202</br>
+								<h1>Технології та безпека хмарних обчислень<br>Бондаренко Остап ІК-202</br></h1>
+								<p> Дізнайтеся, як досягти успіху в автоматизації всього
 														</p>
 								<p id="myname"></p>
 							</div>
